# Wagl2

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt
example/: CMakeLists.txt
example/SDF/: CMakeLists.txt  DistanceTree.h  SDF.h  main.cpp
example/resources/models/DamagedHelmet/glTF/: DamagedHelmet.gltf  Default_AO.DDS  Default_albedo.DDS  Default_emissive.DDS  Default_metalRoughness.DDS  Default_norma.DDS
example/resources/shaders/: PBR.glsl  bloom.frag  blur.frag  common.cshared  common.glsl  cs_meshDistance.glsl  csgeneration.glsl  decalGen.frag  decalGen.vert  fs_distanceVisu.glsl  normals.glsl  passthrough.frag  passthrough.vert  quaternion.glsl  shader.frag  shader.vert  terrain.frag  terrainGen.frag  texToBuffer.glsl  texcoordVis.frag  textureNoTile.glsl
example/resources/textures/plastic_padded/: Plastic_Padded_1K_albedo.dds  Plastic_Padded_1K_ao.dds  Plastic_Padded_1K_metal_roughness.dds  Plastic_Padded_1K_normal.dds
example/resources/textures/sci-fi_panel/: Scifi_Panel4_1K_albedo.dds  Scifi_Panel4_1K_emissive.dds  Scifi_Panel4_1K_metal_roughness.dds  Scifi_Panel4_1K_metallic.dds  Scifi_Panel4_1K_normal.dds  Scifi_Panel4_1K_roughness.dds
example/resources/textures/soil/: Soil_2x2_1K_albedo.dds  Soil_2x2_1K_height.dds  Soil_2x2_1K_normal.dds  Soil_2x2_1K_roughness.dds
example/sparseAtlasTest/: CMakeLists.txt  main.cpp
example/ui/: CMakeLists.txt  main.cpp
example/virtualTexturing/: CMakeLists.txt  CameraController.cpp  CameraController.h  Quadtree.h  VirtualTextureMap.cpp  VirtualTextureMap.h  clz.h  main.cpp
glad/: CMakeLists.txt  extensions.txt
wagl2/: Application.cpp  Application.h  AttributeTypes.cpp  AttributeTypes.h  CMakeLists.txt  Camera.cpp  Camera.h  Geom.h  InputProcessor.h  Model.cpp  Model.h  ModelLoad.cpp  ModelLoad.h  PingPongBuffer.cpp  PingPongBuffer.h  SparseTextureAtlas.cpp  SparseTextureAtlas.h  TextureLoad.cpp  TextureLoad.h  Transform.cpp  Transform.h  UniformBuffer.h  VirtualTexture.cpp  VirtualTexture.h  Window.cpp  Window.h  ttinygltf_impl.cpp
wagl2/debug/: DebugDraw.cpp  DebugDraw.h  DebugShaders.h  debug.frag  debug.vert
wagl2/gl/: Buffer.cpp  Buffer.h  Draw.cpp  Draw.h  Fence.cpp  Fence.h  FrameBuffer.cpp  FrameBuffer.h  Indirect.h  Object.cpp  Object.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
wagl2/shaders/: fullscreen.h
wagl2/ui/: Layout.cpp  Layout.h  UI.h  UIRenderBuffer.cpp  UIRenderBuffer.h
wagl2/util/: FlatMap.h  Matrix.h  Utils.h  files.cpp  files.h  overloaded.h
(+5 files in other folders)
